...
        ),
        child: Column(
          mainAxisSize: MainAxisSize.min,
          crossAxisAlignment: CrossAxisAlignment.stretch,
          children: [
            Text(
              key: const Key('cart-total-price'),
              'Total: ¥${cartController.totalPrice}',
              style: TextStyle(fontSize: 28.sp, fontWeight: FontWeight.bold),
            ),
            const SizedBox(
              height: 15,
            ),
...
